Bugfix: Project cards no longer interfere with hover animation.  project cards wrapped in a border radius to remove white frame caused by border shadow animation.

--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -1,31 +1,33 @@
 .canvas {
-  background: white;
+	background: white;
 }
 .projects {
-  width: 90%;
-  margin: auto;
-  min-height: 90vh;
-  @include flex(space-between, center, row);
-  text-align: center;
-  flex-wrap: wrap;
-  h2 {
-    margin: 5rem;
-  }
+	width: 90%;
+	margin: auto;
+	min-height: 90vh;
+	@include flex(space-between, center, row);
+	text-align: center;
+	flex-wrap: wrap;
+	h2 {
+		margin: 5rem;
+	}
 }
 .aern,
 .visionary {
-  flex: 1 1 40rem;
-  margin-bottom: 5rem;
-  @include flex(center, center, column);
-  animation: fadeIn ease-in 1s;
-  img {
-    -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
-  }
-  img:hover {
-    -webkit-transform: scale(1.05, 1.05);
-    transform: scale(1.05, 1.05);
-    box-shadow: 0px 10px 10px rgba($color: #000000, $alpha: 0.1),
-      0px 20px 40px rgba($color: #000000, $alpha: 0.3);
-  }
+	flex: 1 1 40rem;
+	margin-bottom: 5rem;
+	@include flex(center, center, column);
+	animation: fadeIn ease-in 0.5s;
+	img {
+		border-radius: 3rem;
+		-webkit-transition: all 0.3s
+			cubic-bezier(0.165, 0.84, 0.44, 1);
+		transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+	}
+	img:hover {
+		-webkit-transform: scale(1.05, 1.05);
+		transform: scale(1.05, 1.05);
+		box-shadow: 0px 10px 10px rgba($color: #000000, $alpha: 0.1),
+			0px 20px 40px rgba($color: #000000, $alpha: 0.3);
+	}
 }
