--- a/styles/style.css
+++ b/styles/style.css
@@ -368,12 +368,13 @@ nav ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-animation: fadeIn ease-in 1s;
-          animation: fadeIn ease-in 1s;
+  -webkit-animation: fadeIn ease-in 0.5s;
+          animation: fadeIn ease-in 0.5s;
 }
 
 .aern img,
 .visionary img {
+  border-radius: 3rem;
   -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
